Fix game play - provide guesses until solution is found